- Fixed some visual distortions when in different screen sizes.

--- a/src/contents.css
+++ b/src/contents.css
@@ -56,8 +56,13 @@ body {
 	width: 600px;
 }
 
-.video_entry #info_div #title
+.video_entry #title
 {
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	overflow:hidden;
+	-webkit-line-clamp: 2;
+
 	font-size: 20px;
 	margin-top:10px;
 	margin-bottom:10px;
@@ -76,8 +81,11 @@ body {
 
 .video_entry #description
 {
-	padding-bottom: 10px;
-	padding-top: 5px;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	overflow:hidden;
+	-webkit-line-clamp: 2;
+	margin-top: 16px;
 }
 
 .video_entry #media_info
@@ -203,7 +211,7 @@ button:hover
 
 #group_config #cancel
 {
-	margin-left: 200px;
+	float: right;
 }
 
 #title_change
@@ -255,7 +263,29 @@ button:hover
 {
 	color: #aaa;
 	font-size: 16px;
+	text-align: right;
 	position: fixed;
 	right: 40px;
+	left: 76%;
 	bottom: 20px;
+}
+#author_msg a
+{
+	text-decoration: none;
+	color: inherit;
+}
+#author_msg a:hover
+{
+	color: #007878;
+}
+@media screen and (max-width: 800px)
+{
+	#author_msg
+	{
+		display: none;
+	}
+	#videos
+	{
+		margin-right: 20px;
+	}
 }
